--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">TodoList</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="tache">Ajouter une tâche</string>
+    <string name="new_tache">Nouvelle tâche</string>
 
 </resources>
