--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="tache">Ajouter une tâche</string>
     <string name="new_tache">Nouvelle tâche</string>
+    <string name="done">Fait</string>
 
 </resources>
